--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -46,7 +46,61 @@ h1, h2, h3, h4, h5, h6{
 /*Left*/
 .left{
     text-align: center;
+    position: relative;
 }
+
+.letter{
+    display: block;
+    width: 46px;
+    height: 46px;
+    background-color: #1B1BDD;
+    border-radius: 3.68px;
+    margin: 49px auto;
+
+    position: relative;
+}
+
+.letter__inner{
+    width: 30px;
+    height: 30px;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.logo{
+    display: grid;
+    grid-template-areas: 
+    "1 2"
+    "3 4";
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    width: 40px;
+    height: 40px;
+    margin: 0 auto;
+    position: relative;   
+}
+
+
+.circle{
+    display: block;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: #7777EE;
+    margin: 5px auto;
+}
+.squire{
+    display: block;
+    width: 10px;
+    height: 10px;
+    border-radius: 2px;
+    background-color: #1B1BDD;
+    margin: 5px auto;
+}
+
 /*Central*/
 .central{
     background-color: #FAFAFE;
@@ -166,8 +220,6 @@ h1, h2, h3, h4, h5, h6{
     top: 100%;
     left: 0;
     z-index: 1;
-
-    transition: opacity 0.2s linear;
 }
 
 .nav__link:hover{
