--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -70,6 +70,12 @@ h1, h2, h3, h4, h5, h6{
     transform: translate(-50%, -50%);
 }
 
+.nav{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 .logo{
     display: grid;
     grid-template-areas: 
