--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -485,6 +485,7 @@ h1, h2, h3, h4, h5, h6{
 .eth__img{
     width: 30px;
     height: 30px;
+
     position: absolute;
     top: 50%;
     left: 50%;
@@ -878,4 +879,114 @@ h1, h2, h3, h4, h5, h6{
     border-radius: 50%;
     border: 1px solid #EEEFF8;
     position: relative;
+}
+.right__btns__circle__inner{
+    width: 30px;
+    height: 30px; 
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.right__line{
+    width: 290px;
+    height: 40px;
+    border-top: 1px solid #D9D9D9;
+}
+.right__bottom{
+    width: 290px;
+    height: 400px;
+}
+.right__bottom__followers{
+    width: 290px;
+    height: 80px;
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+}
+.right__bottom__followers.active{
+    background: #FBFBFE;
+    box-shadow: 10px 6px 25px rgba(0, 0, 0, 0.04);
+    border-radius: 4px;
+}
+.right__bottom__number{
+    width: 38px;
+    height: 20px;
+
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 20px;
+    letter-spacing: -0.03em;
+    text-align: center;
+
+    color: #3772FF;
+}
+.right__bottom__photo{
+    width: 50px;
+    height: 50px;
+    margin-right: 15px;
+    border-radius: 50%;
+}
+.right__bottom__data{
+    width: 126px;
+    height: 46px;
+    margin-right: 13px;
+    position: relative;
+}
+.right__bottom__data__name{
+    width: 126px;
+    height: 20px;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 20px;
+    letter-spacing: -0.03em;
+    color: #373748;
+ 
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.right__bottom__data__account{
+    width: 76px;
+    height: 19px;
+    display: flex;
+    align-items: center;
+
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+.right__bottom__data__eth{
+    width: 76px;
+    height: 19px;
+}
+.right__bottom__data__eth__img{
+    width: 13px;
+    height: 13px;
+    margin: 0 auto;
+}
+.right__bottom__data__number{
+    width: 76px;
+    height: 19px;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 19px;
+    letter-spacing: -0.03em;
+    color: #AEAEAE;
+}
+.right__bottom__plus{
+    width: 33px;
+    height: 33px;
+    background: #F4F5FB;
+    position: relative;
+}
+.right__bottom__plus__img{
+    width: 20px;
+    height: 20px;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
